Closed Bug 1131874 Opened 9 years ago Closed 9 years ago

ServiceWorker persistence activation fixes

Categories

(Core :: DOM: Workers, defect)

33 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: nsm, Assigned: nsm)

References

Details

Attachments

(1 file, 2 obsolete files)

1) Only store the registration after activation has finished (state Activate, not Activating)
2) Restored state should be set to Activated.
Attached file MozReview Request: bz://1131874/nsm (obsolete) —
/r/3719 - Bug 1131874 - ServiceWorker persistence activation fixes.
/r/3721 - Bug 1131874 - dummy commit to deal with mozreview IGNORE IT

Pull down these commits:

hg pull review -r b326b05a63dcd8f60c3d44cfb466b5bb58f961af
Attachment #8562471 - Flags: review?(amarchesini)
nsm, it seems that the mozreview team is not going to implement persona login soon.
Can you please send me "old-style" review requests?

About this patch:

SetStateUncheckedAndWithoutEvent is just used to activate the worker. So probably we can just change it to: SetActivateStateUnckedWithoutEvent(). Or are you planning to use this method in other contexts?

r=me
Attachment #8562471 - Flags: review?(amarchesini) → review+
Assignee: nobody → nsm.nikhil
Status: NEW → ASSIGNED
Please provide a Try link.
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/afad28f235a8
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.