Bug 1131874 - ServiceWorker persistence activation fixes. r=baku

--HG--
extra : rebase_source : 2c8dd5e97740cf45c4e08684145d882e9551d3cb